# tryton

./: README.rst
trytond/: setup.py
trytond/doc/topics/: index.rst  mcp.rst
trytond/trytond/: wsgi.py
trytond/trytond/protocols/: mcp.py
trytond/trytond/tests/: test_mcp.py
trytond/trytond/tools/: mcp.py
tuion/: README.md  pyproject.toml
tuion/tuion/: __init__.py  app.py  cli.py  client.py  data.py
